--- a/08 Media Queries/estilo.css
+++ b/08 Media Queries/estilo.css
@@ -1,31 +1,78 @@
+/* Pode usar tanto min-width quanto max-width conforme o desenvolvimento */
 
 /* 
     Small devices (landscape phones)
     Ao atingir a proporção de tamanho ou ser maior 
 */
+
 @media (min-width: 576px) {
-    body{
+    /* body{
         background: red;
-    }
+    } */
  }
 
 /* Media devices (tables, 768px e superior) */
 @media (min-width: 768px) { 
-    body{
+    /* body{
         background: blue;
-    }
+    } */
 }
 
 /* Large devices (desktops, 992px e superior) */
 @media (min-width: 992px) {
+   /*  body{
+        background: orange;
+    } */
+ }
+
+/* Extra large devices (larges desktops, 1280px e superior) */
+@media ( min-width: 1280px) {
+    /* body{
+        background: yellow;
+    } */
+ }
+
+ /* 
+    Extra small devicess (portraint phones)
+    Faça algo até a medida informada 
+*/
+  @media (max-width: 575px){
+    body{
+        background: #870000;
+    }
+ } 
+
+ /*Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+    body{
+        background: #870000;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    body{
+        background: blue;
+    }
+  }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
     body{
         background: orange;
     }
  }
 
-/* Extra large devices (larges desktops, 1280px e superior) */
-@media ( min-width: 1280px) {
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
     body{
         background: yellow;
     }
  }
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    body{
+        background: black;
+    }
+}
